--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "rollup-plugin-terser": "^5.1.1"
   },
   "dependencies": {
+    "ethereumjs-util": "^6.1.0",
     "sturdy-websocket": "^0.1.12"
   }
 }
