--- a/package.json
+++ b/package.json
@@ -23,10 +23,9 @@
     "rollup-plugin-terser": "^5.1.1"
   },
   "dependencies": {
-    "ow": "^0.13.2",
     "ethereumjs-util": "^6.1.0",
-    "sturdy-websocket": "^0.1.12",
-    "uuid": "^3.3.3"
+    "ow": "^0.13.2",
+    "promise-polyfill": "^8.1.3"
   },
   "scripts": {
     "prepare": "rollup -c",
