--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "ow": "^0.13.2",
     "ethereumjs-util": "^6.1.0",
-    "sturdy-websocket": "^0.1.12",
-    "uuid": "^3.3.3"
+    "sturdy-websocket": "^0.1.12"
   },
   "scripts": {
     "prepare": "rollup -c",
