--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dist/esm/*",
     "dist/cjs/*"
   ],
+  "types": "./types.d.ts",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
