--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,8 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
+            - v1-dependencies-{{ checksum "package.json" }}
+            - v1-dependencies-
       - run: yarn
       - run: yarn test
       - run: yarn build
@@ -28,14 +28,14 @@ jobs:
       - run: sudo npm i -g npm-cli-login
       - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
       - run: npm publish --dry-run
-      - run: gzip -9 ./dist/iife/sdk.js
-      - run: mv ./dist/iife/sdk.js.gz ./dist/iife/sdk.js
+      - run: gzip -9 /home/circleci/project/dist/bnc-sdk.umd.js
+      - run: mv /home/circleci/project/dist/bnc-sdk.umd.js.gz /home/circleci/project/dist/bnc-sdk.umd.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
-      - run: mkdir /root/project/deploy-temp
-      - run: mkdir /root/project/deploy-temp/${VERSION}
-      - run: mv /root/project/dist/iife/*.js /root/project/deploy-temp/${VERSION}/
-      - run: aws s3 sync /root/project/deploy-temp/${VERSION}/ s3://staging.sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
+      - run: mkdir /home/circleci/project/deploy-temp
+      - run: mkdir /home/circleci/project/deploy-temp/${VERSION}
+      - run: mv /home/circleci/project/dist/*.js /home/circleci/project/deploy-temp/${VERSION}/
+      - run: aws s3 sync /home/circleci/project/deploy-temp/${VERSION}/ s3://staging.sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
   deploy_prod:
     docker:
       - image: circleci/node:8.15-browsers
@@ -48,8 +48,8 @@ jobs:
       - run: sudo npm i -g add npm-cli-login
       - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
       - run: npm publish
-      - run: gzip -9 ./dist/iife/sdk.js
-      - run: mv ./dist/iife/sdk.js.gz ./dist/iife/sdk.js
+      - run: gzip -9 /home/circleci/project/dist/bnc-sdk.umd.js
+      - run: mv /home/circleci/project/dist/bnc-sdk.umd.js.gz /home/circleci/project/dist/bnc-sdk.umd.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
       - run: mkdir /root/project/deploy-temp
