Update circle ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ jobs:
       - run: sudo npm i -g npm-cli-login
       - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
       - run: npm publish --dry-run
+      - run: ls -al
       - run: gzip -9 /home/circleci/project/dist/bnc-sdk.js
       - run: mv /home/circleci/project/dist/bnc-sdk.js.gz /home/circleci/project/dist/bnc-sdk.js
       - run: ls -al
