--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,14 +30,14 @@ jobs:
       - run: npm publish --dry-run
       - run: ls -al
       - run: pwd
-      - run: gzip -9 /home/circleci/project/dist/bnc-sdk.js
-      - run: mv /home/circleci/project/dist/bnc-sdk.js.gz /home/circleci/project/dist/bnc-sdk.js
+      - run: gzip -9 /root/project/dist/bnc-sdk.js
+      - run: mv /root/project/dist/bnc-sdk.js.gz /root/project/dist/bnc-sdk.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
-      - run: mkdir /home/circleci/project/deploy-temp
-      - run: mkdir /home/circleci/project/deploy-temp/${VERSION}
-      - run: mv /home/circleci/project/dist/*.js /home/circleci/project/deploy-temp/${VERSION}/
-      - run: aws s3 sync /home/circleci/project/deploy-temp/${VERSION}/ s3://staging.sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
+      - run: mkdir /root/project/deploy-temp
+      - run: mkdir /root/project/deploy-temp/${VERSION}
+      - run: mv /root/project/dist/*.js /root/project/deploy-temp/${VERSION}/
+      - run: aws s3 sync /root/project/deploy-temp/${VERSION}/ s3://staging.sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
   deploy_prod:
     docker:
       - image: circleci/node:8.15-browsers
@@ -50,8 +50,8 @@ jobs:
       - run: sudo npm i -g add npm-cli-login
       - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
       - run: npm publish
-      - run: gzip -9 /home/circleci/project/dist/bnc-sdk.js
-      - run: mv /home/circleci/project/dist/bnc-sdk.js.gz /home/circleci/project/dist/bnc-sdk.js
+      - run: gzip -9 /root/project/dist/bnc-sdk.js
+      - run: mv /root/project/dist/bnc-sdk.js.gz /root/project/dist/bnc-sdk.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
       - run: mkdir /root/project/deploy-temp
