--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "main": "dist/bnc-sdk.js",
   "module": "dist/bnc-sdk.es5.js",
-  "typings": "dist/types/bnc-sdk.d.ts",
+  "typings": "dist/types/src/bnc-sdk.d.ts",
   "files": [
     "dist"
   ],
