--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "notifications"
   ],
   "main": "dist/bnc-sdk.js",
-  "module": "dist/bnc-sdk.es5.js",
-  "typings": "dist/types/src/bnc-sdk.d.ts",
+  "module": "dist/bnc-sdk.esm.js",
+  "typings": "dist/types/src/index.d.ts",
   "files": [
     "dist"
   ],
@@ -20,82 +20,25 @@
     "url": "https://github.com/blocknative/sdk"
   },
   "license": "MIT",
-  "engines": {
-    "node": ">=6.0.0"
-  },
   "scripts": {
-    "lint": "tslint  --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
-    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
-    "start": "rollup -c rollup.config.ts -w",
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watch",
-    "test:prod": "npm run lint && npm run test -- --no-cache",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "report-coverage": "cat ./coverage/lcov.info | coveralls"
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/",
-      "/src/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverageFrom": [
-      "src/*.{js,ts}"
-    ]
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
+    "build": "rimraf dist && rollup -c && babel dist/bnc-sdk.esm.js -o dist/bnc-sdk.esm.js && babel dist/bnc-sdk.js -o dist/bnc-sdk.js",
+    "test": "echo \"TBD\" && exit 0"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.11.0",
-    "colors": "^1.3.2",
-    "coveralls": "^3.0.2",
-    "cross-env": "^5.2.0",
-    "jest": "^23.6.0",
-    "jest-config": "^23.6.0",
-    "lint-staged": "^8.0.0",
-    "lodash.camelcase": "^4.3.0",
-    "prettier": "^1.14.3",
-    "prompt": "^1.0.0",
-    "replace-in-file": "^3.4.2",
-    "rimraf": "^2.6.2",
-    "rollup": "^1.19.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.24.3",
-    "shelljs": "^0.8.3",
-    "ts-jest": "^23.10.2",
-    "ts-node": "^7.0.1",
-    "tslib": "^1.10.0",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.15.0",
+    "@babel/cli": "^7.7.0",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "babel-plugin-external-helpers": "^6.18.0",
+    "rimraf": "^3.0.0",
+    "rollup": "^1.27.5",
+    "rollup-plugin-typescript2": "0.21.0",
     "typescript": "^3.6.4"
   },
   "dependencies": {
+    "crypto-es": "^1.2.2",
     "sturdy-websocket": "^0.1.12"
   }
 }
