--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,13 +30,13 @@ jobs:
       - run: npm publish --dry-run
       - run: ls -al
       - run: pwd
-      - run: gzip -9 /root/project/dist/bnc-sdk.js
-      - run: mv /root/project/dist/bnc-sdk.js.gz /root/project/dist/bnc-sdk.js
+      - run: gzip -9 /root/project/dist/iife/index.js
+      - run: mv /root/project/dist/iife/index.js.gz /root/project/dist/iife/index.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
       - run: mkdir /root/project/deploy-temp
       - run: mkdir /root/project/deploy-temp/${VERSION}
-      - run: mv /root/project/dist/*.js /root/project/deploy-temp/${VERSION}/
+      - run: mv /root/project/dist/iife/*.js /root/project/deploy-temp/${VERSION}/
       - run: aws s3 sync /root/project/deploy-temp/${VERSION}/ s3://staging.sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
   deploy_prod:
     docker:
@@ -50,13 +50,13 @@ jobs:
       - run: sudo npm i -g add npm-cli-login
       - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
       - run: npm publish
-      - run: gzip -9 /root/project/dist/bnc-sdk.js
-      - run: mv /root/project/dist/bnc-sdk.js.gz /root/project/dist/bnc-sdk.js
+      - run: gzip -9 /root/project/dist/iife/index.js
+      - run: mv /root/project/dist/iife/index.js.gz /root/project/dist/iife/index.js
       - run: ls -al
       - run: echo export VERSION=`awk '/version/{gsub(/("|",)/,"",$2);print $2};' package.json | sed 's/\./-/g'` >> $BASH_ENV
       - run: mkdir /root/project/deploy-temp
       - run: mkdir /root/project/deploy-temp/${VERSION}
-      - run: mv /root/project/dist/*.js /root/project/deploy-temp/${VERSION}/
+      - run: mv /root/project/dist/iife/*.js /root/project/deploy-temp/${VERSION}/
       - run: aws s3 sync /root/project/deploy-temp/${VERSION}/ s3://sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
 workflows:
   version: 2
