--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
       - run: mkdir /root/project/deploy-temp/${VERSION}
       - run: mv /root/project/dist/iife/*.js /root/project/deploy-temp/${VERSION}/
       - run: aws s3 sync /root/project/deploy-temp/${VERSION}/ s3://sdk.blocknative.com/${VERSION}/ --content-type "text/javascript" --content-encoding "gzip" --cache-control "max-age=31536000" --grants read=uri=http://acs.amazonaws.com/groups/global/AllUsers
-  deploy_demo:
+  deploy_workbench_staging:
     docker:
       - image: circleci/node:10.18.1-browsers
         user: root
@@ -84,7 +84,7 @@ workflows:
             branches:
               only:
                 - master
-      - deploy_demo:
+      - deploy_workbench_staging:
           filters:
             branches:
               only:
