Fix npm publishing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,7 @@ jobs:
       - run: sudo apt update && sudo apt install awscli
       - run: yarn
       - run: yarn build
-      - run: sudo npm i -g npm-cli-login
-      - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
+      - run: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > .npmrc
       - run: npm publish --dry-run
       - run: ls -al
       - run: pwd
@@ -47,9 +46,8 @@ jobs:
       - run: sudo apt update && sudo apt install awscli
       - run: yarn
       - run: yarn build
-      - run: sudo npm i -g add npm-cli-login
-      - run: NPM_USER=$NPM_USERNAME NPM_EMAIL=$NPM_EMAIL NPM_PASS=$NPM_PASSWORD npm-cli-login
-      - run: npm publish
+      - run: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > .npmrc
+      - run: npm publish --access public
       - run: gzip -9 /root/project/dist/iife/index.js
       - run: mv /root/project/dist/iife/index.js.gz /root/project/dist/iife/index.js
       - run: ls -al
