--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "crypto-es": "^1.2.2",
+    "nanoid": "^3.3.1",
     "rxjs": "^6.6.3",
     "sturdy-websocket": "^0.1.12"
   }
