--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bnc-sdk",
-  "version": "4.1.0-0.1.0",
+  "version": "4.2.0",
   "description": "SDK to connect to the blocknative backend via a websocket connection",
   "keywords": [
     "ethereum",
@@ -48,6 +48,7 @@
     "crypto-es": "^1.2.2",
     "nanoid": "^3.3.1",
     "rxjs": "^6.6.3",
-    "sturdy-websocket": "^0.1.12"
+    "sturdy-websocket": "^0.1.12",
+    "yarn": "^1.22.18"
   }
 }
