--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
     "crypto-es": "^1.2.2",
     "nanoid": "^3.3.1",
     "rxjs": "^6.6.3",
-    "sturdy-websocket": "^0.1.12",
-    "yarn": "^1.22.18"
+    "sturdy-websocket": "^0.1.12"
   }
 }
