--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bnc-sdk",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "SDK to connect to the blocknative backend via a websocket connection",
   "keywords": [
     "ethereum",
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "crypto-es": "^1.2.2",
+    "nanoid": "^3.3.1",
     "rxjs": "^6.6.3",
     "sturdy-websocket": "^0.1.12"
   }
