--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@rollup/plugin-commonjs": "^11.0.2",
     "@rollup/plugin-json": "^4.0.0",
     "@rollup/plugin-node-resolve": "^7.1.1",
+    "@types/crypto-js": "^4.2.2",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "babel-plugin-external-helpers": "^6.18.0",
@@ -45,7 +46,7 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "crypto-es": "^1.2.2",
+    "crypto-js": "^4.2.0",
     "nanoid": "^3.3.1",
     "rxjs": "^6.6.3",
     "sturdy-websocket": "^0.1.12"
